jwt tokens impl + new migrations